gramaticas.txt
<comentario> ::= { '*******' }

<programa> ::= <bloco_principal>

<bloco_principal> ::= program <id>; [<declaracao>]* Begin <bloco> end.

<declaracao> ::= <tipo> <id> [,<id>]*;

<tipo> ::= INTEGER | REAL | STRING

<bloco> ::= Begin [<comando> [ <comando>]*]* end ;

<comando> ::= <comando_basico> | <iteracao> | <condicional> ;

<condicional> ::= if (<expr_relacional>) then <comando> [else <comando>]*

<comando_basico> ::= <atribuicao> | <bloco> | <chamada>

<chamada> ::= <comando_all>

<comando_all> ::= All ( <id>  [, <id>]* );

<atribuicao> ::= <id> := <expr_arit>;

<iteracao> ::= <itera_while> | <itera_repeat>

<itera_while> ::= while (<expr_relacional>) do <comando>

<itera_repeat> ::= repeat <comando> until (<expr_relacional>) ;

<val> ::= <id> | INTEGER | REAL

<expr_relacional> ::= <op_relacional> | <multi_op_relacional>

<multi_op_relacional> ::= (<expr_relacional>) [<op_booleanos> (<expr_relacional>)]*

<op_relacional> ::= <val> OP_RELACIONAL <val>

<expr_arit> ::= <val> | <op_arit> | <multi_arit>

<op_arit> ::= <val> OP_ARITMETICO <val>

<multi_arit> ::= (<expr_arit>) OP_ARITMETICO (<expr_arit>)
